cmds/xfer -> succeeded to run

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -23,6 +23,7 @@
             "args": [
                 "xfer",
                 "--metadata-file=data/metadata.toml",
+                "--model=prodflow",
                 "--debug",
             ]
         }
